fastticket-devsecops-kit/fastticket-devsecops/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fastticket
  labels:
    app.kubernetes.io/name: fastticket
